src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Pivotal Support</fullName>
        <description>Pivotal Support will describe the process  involved by Pivotal team to resolve the tickets</description>
        <isActive>true</isActive>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Alert__c</fullName>
        <description>Used in Quick Action Request Escalation Management</description>
        <formula>"Click save to engage Escalation Management."</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCS_Status__c</fullName>
        <description>This field is used to store BCS Status information</description>
        <inlineHelpText>This field is used to store BCS Status information</inlineHelpText>
        <label>BCS Status</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Best_Method_of_Contact__c</fullName>
        <formula>TEXT(Contact.Best_Method_of_Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Method of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buildpacks_Category__c</fullName>
        <label>Buildpacks Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Binary</fullName>
                </value>
                <value>
                    <fullName>Go</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Node.js</fullName>
                </value>
                <value>
                    <fullName>Other (Community)</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>Ruby</fullName>
                </value>
                <value>
                    <fullName>Staticfile</fullName>
                </value>
                <value>
                    <fullName>tc Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CES_Case_Survey_Comments__c</fullName>
        <description>Customer Comments received from Closed case survey - positive feedback from score of 4,5 only; visible to all.</description>
        <inlineHelpText>Customer Comments received from Closed case survey</inlineHelpText>
        <label>CES Case Survey Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CES_Case_Survey_Score__c</fullName>
        <description>Score from Case Survey sent to customer - this is the "positive" feedback score visible to all. Populated by process builder on the survey feedback object. [HG]</description>
        <inlineHelpText>Score from Case Survey sent to customer</inlineHelpText>
        <label>CES Case Survey Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_CLI_Category__c</fullName>
        <label>CF CLI Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>OS X</fullName>
                </value>
                <value>
                    <fullName>Plugins</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSR_Hand_Off_to__c</fullName>
        <label>CSR Hand Off to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hand Off::Ask IT</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Customer Engineers</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Customer Service Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Education Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::EH/SP Escalation Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::GSS Escalation Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::HR Department</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Marketing Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Operations Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::PivNet Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Pivotal Labs</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Pivotal Tracker Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Product Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::PWS Customer Engineer Team</fullName>
                </value>
                <value>
                    <fullName>Hand Off::Sales Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseClosedDayOfWeek__c</fullName>
        <description>6.25.19[HG] for reporting purposes only</description>
        <formula>CASE( 
MOD(DATEVALUE( ClosedDate ) - DATE( 1900, 1, 7 ), 7 ), 
0, "1.Sunday", 
1, "2.Monday", 
2, "3.Tuesday", 
3, "4.Wednesday", 
4, "5.Thursday", 
5, "6.Friday", 
"7.Saturday" 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseClosedDayOfWeek</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseClosedMonth__c</fullName>
        <formula>(TEXT(YEAR(DATEVALUE(ClosedDate))) +' '+ 
LPAD (TEXT(MONTH(DATEVALUE (ClosedDate))) ,2,"0") +"-"+ 
CASE(MONTH(DATEVALUE(ClosedDate)), 
1, "January", 
2, "February", 
3, "March", 
4, "April", 
5, "May", 
6, "June", 
7, "July", 
8, "August", 
9, "September", 
10, "October", 
11, "November", 
12, "December", 
NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseClosedMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseEscalateDayOfWeek__c</fullName>
        <description>Hidden field for reporting displaying day of week Case was escalated. 9.4.18 Aine Byrne request for weekend reporting</description>
        <formula>CASE( 
MOD(DATEVALUE(Escalation_Request_Time__c) - DATE( 1900, 1, 7 ), 7 ), 
0, "1.Sunday", 
1, "2.Monday", 
2, "3.Tuesday", 
3, "4.Wednesday", 
4, "5.Thursday", 
5, "6.Friday", 
"7.Saturday" 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field for reporting displaying day of week Case was escalated.</inlineHelpText>
        <label>CaseEscalateDayOfWeek</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseEscalateTime__c</fullName>
        <description>Hidden field for reporting displaying time of escalation in HH:MM (24-hr). 9.4.18 Aine Byrne request for reporting on weekend Cases.</description>
        <formula>IF( 
ISBLANK(Escalation_Request_Time__c),"0", 
TEXT(VALUE( 
Left( 
right( trim(TEXT(Escalation_Request_Time__c) ),9),2))) 
&amp;":"&amp;mid(right( trim(TEXT(Escalation_Request_Time__c) ),9),4,2) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field for reporting displaying time of escalation in HH:MM (24-hr).</inlineHelpText>
        <label>CaseEscalateTime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>CaseID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOpenDayOfWeek__c</fullName>
        <description>Hidden field for reporting only; populates day of week Case was created. 9.4.18 Reporting request from Aine Byrne</description>
        <formula>/* Modified original formula to shift days a day back */
CASE( 
MOD(DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ), 
0, "1.Sunday", 
1, "2.Monday", 
2, "3.Tuesday", 
3, "4.Wednesday", 
4, "5.Thursday", 
5, "6.Friday", 
"7.Saturday" 
)

/*  Original setup by Heather.  After speaking with Aine the days are off by one
CASE( 
MOD(DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ), 
0, "1.Saturday", 
1, "2.Sunday", 
2, "3.Monday", 
3, "4.Tuesday", 
4, "5.Wednesday", 
5, "6.Thursday", 
"7.Friday" 
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field for reporting only; populates day of week Case was created</inlineHelpText>
        <label>CaseOpenDayOfWeek</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOpenTime__c</fullName>
        <description>Hidden field for reporting to display time (HH:MM 24-hr clock) only of Case created time. 9.4.18 Requested by Aine Byrne for reporting request</description>
        <formula>IF( 
ISBLANK(CreatedDate),"0", 
TEXT(VALUE( 
Left( 
right( trim(TEXT(CreatedDate) ),9),2))) 
&amp;":"&amp;mid(right( trim(TEXT(CreatedDate) ),9),4,2) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field for reporting to display time (HH:MM 24-hr clock) only of Case created time.</inlineHelpText>
        <label>CaseOpenTime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwnerMgrEmail__c</fullName>
        <formula>Owner:User.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseOwnerMgrEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwnerName__c</fullName>
        <formula>Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseOwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseURL__c</fullName>
        <formula>HYPERLINK("https://pivotal--monte.lightning.force.com/" &amp;  Id , CaseNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comments__c</fullName>
        <label>Case Comments</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Contact_Geo__c</fullName>
        <description>Case Contact GEO not on page layout . To be used in Queue lists [7.9.19 HG, Jinju Lee request via Freshdesk 477472]</description>
        <formula>(BusinessHours.Name)</formula>
        <inlineHelpText>Case Contact GEO not on page layout . To be used in Queue lists</inlineHelpText>
        <label>Case Contact Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <description>Hidden Field for  reporting only. Counts the number of Cases</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden Field for  reporting only. Counts the number of Cases. HG 9.10.18</inlineHelpText>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; ' ' &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Role__c</fullName>
        <description>Display Owner Role or Queue Name</description>
        <formula>IF( ISNULL(Owner:User.UserRole.Name),  Owner:Queue.QueueName, Owner:User.UserRole.Name )</formula>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Time__c</fullName>
        <description>This field will calculate solvedtime – Opened Date/Time</description>
        <formula>(Case_solved_time__c- CreatedDate)*24*60*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Problem::Account / Dashboard</fullName>
                </value>
                <value>
                    <fullName>Problem::Defect</fullName>
                </value>
                <value>
                    <fullName>Problem::Documentation</fullName>
                </value>
                <value>
                    <fullName>Problem::Error</fullName>
                </value>
                <value>
                    <fullName>Problem::Implementation</fullName>
                </value>
                <value>
                    <fullName>Problem::Installation</fullName>
                </value>
                <value>
                    <fullName>Problem::Logging</fullName>
                </value>
                <value>
                    <fullName>Problem::Performance</fullName>
                </value>
                <value>
                    <fullName>Problem::Security</fullName>
                </value>
                <value>
                    <fullName>Problem::Technical Issues</fullName>
                </value>
                <value>
                    <fullName>Problem::Upgrade</fullName>
                </value>
                <value>
                    <fullName>Question::Contract / Maintenance / Licensing</fullName>
                </value>
                <value>
                    <fullName>Question::Partnership / Business Development</fullName>
                </value>
                <value>
                    <fullName>Question::Software Availability / Compatibility / Upgrades</fullName>
                </value>
                <value>
                    <fullName>Request::Customer Service Improvement</fullName>
                </value>
                <value>
                    <fullName>Request::Documentation Improvement</fullName>
                </value>
                <value>
                    <fullName>Request::Product Feature Improvement</fullName>
                </value>
                <value>
                    <fullName>Remote Access Meetings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_hold_time_staring__c</fullName>
        <description>This field is used store staring time when case status is on hold</description>
        <label>Case hold time staring</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_on_hold_time__c</fullName>
        <description>This field is used to capture time when case status moved to on hold</description>
        <label>Case on hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_on_hold_total_time__c</fullName>
        <description>This field will capture total hold time for case</description>
        <label>Case on hold total time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_solved_time__c</fullName>
        <description>This will store date/time when case is solved</description>
        <label>Case Solved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commented_By__c</fullName>
        <label>Commented By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Products__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Component</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <formula>Contact.Email</formula>
        <label>Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_FirstName__c</fullName>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_LastName__c</fullName>
        <formula>Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Secondary_Phone__c</fullName>
        <formula>Contact.Secondary_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Secondary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Category__c</fullName>
        <label>Customer Services Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSR PWS Support</fullName>
                </value>
                <value>
                    <fullName>Entitlement</fullName>
                </value>
                <value>
                    <fullName>Internal Communications</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Pivnet</fullName>
                </value>
                <value>
                    <fullName>Pivotal Support Portal</fullName>
                </value>
                <value>
                    <fullName>Federation</fullName>
                    <isActive>false</isActive>
                    <label>Federation</label>
                </value>
                <value>
                    <fullName>Handoff</fullName>
                    <isActive>false</isActive>
                    <label>Handoff</label>
                </value>
                <value>
                    <fullName>KB Article Created</fullName>
                    <isActive>false</isActive>
                    <label>KB Article Created</label>
                </value>
                <value>
                    <fullName>MOD</fullName>
                    <isActive>false</isActive>
                    <label>MOD</label>
                </value>
                <value>
                    <fullName>Managed by CloudOps</fullName>
                    <isActive>false</isActive>
                    <label>Managed by CloudOps</label>
                </value>
                <value>
                    <fullName>POC</fullName>
                    <isActive>false</isActive>
                    <label>POC</label>
                </value>
                <value>
                    <fullName>Pivotal EH/SPClient</fullName>
                    <isActive>false</isActive>
                    <label>Pivotal EH/SPClient</label>
                </value>
                <value>
                    <fullName>SAB - Federation</fullName>
                    <isActive>false</isActive>
                    <label>SAB - Federation</label>
                </value>
                <value>
                    <fullName>Sales Opportunity</fullName>
                    <isActive>false</isActive>
                    <label>Sales Opportunity</label>
                </value>
                <value>
                    <fullName>Software</fullName>
                    <isActive>false</isActive>
                    <label>Software</label>
                </value>
                <value>
                    <fullName>Spam</fullName>
                    <isActive>false</isActive>
                    <label>Spam</label>
                </value>
                <value>
                    <fullName>Talkdesk</fullName>
                    <isActive>false</isActive>
                    <label>Talkdesk</label>
                </value>
                <value>
                    <fullName>Testing</fullName>
                    <isActive>false</isActive>
                    <label>Testing</label>
                </value>
                <value>
                    <fullName>VMWare</fullName>
                    <isActive>false</isActive>
                    <label>VMWare</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Service_Sub_Category_1__c</fullName>
        <description>This Picklist Field values are dependent on Customer Service Category</description>
        <label>Customer Services Sub Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Service_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Deletion</fullName>
                </value>
                <value>
                    <fullName>Account Questions</fullName>
                </value>
                <value>
                    <fullName>AskIT</fullName>
                </value>
                <value>
                    <fullName>Beta Tile Request</fullName>
                </value>
                <value>
                    <fullName>Billing Questions</fullName>
                </value>
                <value>
                    <fullName>Cannot locate PCN</fullName>
                </value>
                <value>
                    <fullName>Case Escalation</fullName>
                </value>
                <value>
                    <fullName>Case Owner Update</fullName>
                </value>
                <value>
                    <fullName>Case Requeue</fullName>
                </value>
                <value>
                    <fullName>Close User Account</fullName>
                </value>
                <value>
                    <fullName>Completed Onboarding AMER</fullName>
                </value>
                <value>
                    <fullName>Completed Onboarding APJ</fullName>
                </value>
                <value>
                    <fullName>Completed Onboarding EMEA</fullName>
                </value>
                <value>
                    <fullName>Completed Partner Onboarding</fullName>
                </value>
                <value>
                    <fullName>Customer Engineers</fullName>
                </value>
                <value>
                    <fullName>Customer Service Team</fullName>
                </value>
                <value>
                    <fullName>Documentation Team</fullName>
                </value>
                <value>
                    <fullName>DPL Check</fullName>
                </value>
                <value>
                    <fullName>Education Team</fullName>
                </value>
                <value>
                    <fullName>EH/SP</fullName>
                </value>
                <value>
                    <fullName>EOA/EOL Request</fullName>
                </value>
                <value>
                    <fullName>EOA Request</fullName>
                </value>
                <value>
                    <fullName>Expired Support Contract</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Field Assist</fullName>
                </value>
                <value>
                    <fullName>Heightened Awareness</fullName>
                </value>
                <value>
                    <fullName>How to Submit Pivotal Support Request</fullName>
                </value>
                <value>
                    <fullName>How to Submit VMWare Requests</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Legal Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Service_Sub_Category_2__c</fullName>
        <description>This Picklist field values are dependent on Customer Service Sub Category 1</description>
        <label>Customer Services Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Service_Sub_Category_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add New PCN</fullName>
                    <label>Add New Entitlement</label>
                </value>
                <value>
                    <fullName>Amazon - Entitled</fullName>
                </value>
                <value>
                    <fullName>Amazon - Not Entitled</fullName>
                </value>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Entitled</fullName>
                </value>
                <value>
                    <fullName>Google Cloud Platform - Entitled</fullName>
                </value>
                <value>
                    <fullName>Google Cloud Platform - Not Entitled</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure - Entitled</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure - Non Entitled</fullName>
                    <label>Microsoft Azure - Not Entitled</label>
                </value>
                <value>
                    <fullName>Non Entitled</fullName>
                    <label>Not Entitled</label>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Support Exception Granted</fullName>
                </value>
                <value>
                    <fullName>Support Exception Rejected</fullName>
                </value>
                <value>
                    <fullName>Typical</fullName>
                </value>
                <value>
                    <fullName>Update Contract date</fullName>
                    <label>Update Contract Date</label>
                </value>
                <value>
                    <fullName>ISV - Entitled</fullName>
                    <isActive>false</isActive>
                    <label>ISV - Entitled</label>
                </value>
                <value>
                    <fullName>ISV - Not Entitled</fullName>
                    <isActive>false</isActive>
                    <label>ISV - Not Entitled</label>
                </value>
                <value>
                    <fullName>Large</fullName>
                    <isActive>false</isActive>
                    <label>Large</label>
                </value>
                <value>
                    <fullName>Managed Services - Entitled</fullName>
                    <isActive>false</isActive>
                    <label>Managed Services - Entitled</label>
                </value>
                <value>
                    <fullName>Managed Services - Not Entitled</fullName>
                    <isActive>false</isActive>
                    <label>Managed Services - Not Entitled</label>
                </value>
                <value>
                    <fullName>PPRP - Entitled</fullName>
                    <isActive>false</isActive>
                    <label>PPRP - Entitled</label>
                </value>
                <value>
                    <fullName>PPRP - Not Entitled</fullName>
                    <isActive>false</isActive>
                    <label>PPRP - Not Entitled</label>
                </value>
                <value>
                    <fullName>Pushed case through</fullName>
                    <isActive>false</isActive>
                    <label>Pushed case through</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Strategic - Entitled</fullName>
                    <isActive>false</isActive>
                    <label>Strategic - Entitled</label>
                </value>
                <value>
                    <fullName>Strategic - Not Entitled</fullName>
                    <isActive>false</isActive>
                    <label>Strategic - Not Entitled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>IF(INCLUDES(Account.Customer_Type__c,'TOP'),'TOP'+ BR(),NULL)+
IF(INCLUDES(Account.Customer_Type__c,'BCS') ,'BCS'+ BR(),NULL)+
IF(INCLUDES(Account.Customer_Type__c,'BAT') ,'BAT'+ BR(),NULL)+
IF(INCLUDES(Account.Customer_Type__c,'PWS') ,'PWS'+ BR(),NULL)+
IF(INCLUDES(Account.Customer_Type__c,'Customer Success') ,'Customer Success'+ BR(),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Planned_Procedure__c</fullName>
        <description>For heightened awareness events</description>
        <inlineHelpText>Eg Runbook/Timeline Doc if available</inlineHelpText>
        <label>Customer's Planned Procedure</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSE_involved__c</fullName>
        <label>DSE involved?:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_Survey_Email__c</fullName>
        <formula>OR(ISPICKVAL(Account.Special_Handling__c,'EH - Executive Handling'),ISPICKVAL(Account.Special_Handling__c,'SP - Special Practices'), Email_to_Case_Origin__c = 'EHSP Support',Email_to_Case_Origin__c = 'EHSP Escalations',ISPICKVAL(Resolution_Code__c,'Not Entitled'), CONTAINS(Contact.Email,'@pivotal.io') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Survey Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Survey__c</fullName>
        <formula>CONTAINS(Contact.Email, "pivotal")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EM_Disengage_Time__c</fullName>
        <label>EM Disengage Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EM_Disengage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check when escalation manager is no longer involved in the case.</description>
        <label>EM Disengage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_to_Case_Origin__c</fullName>
        <formula>CASE(InboundEmailAlias__c,
"support@pivotal.io", "Support",
"customer-service@pivotal.io", "Customer-Service",
"support-escalations@pivotal.io", "Support Escalations",
"pws-account@pivotal.io","PWS-Account",
"pws-feedback@pivotal.io", "PWS-Feedback",
"pws-support@pivotal.io", "PWS-Support",
"ehsp-support@pivotal.io", "EHSP Support",
"ehsp-escalations@pivotal.io", "EHSP Escalations",
"federation-support@pivotal.io", "Federation Support",
"poc-support@pivotal.io", "POC Support",
"ondemand-support@pivotal.io", "On Demand Support",
" ")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email to Case Origin</label>
        <type>Text</type>
    </fields>
</CustomObject>